# searchless-chess

./: .gitignore  README.md  REPORT.md  VM.md  eval_bdh_v4.sbatch  prepare_data.sbatch  prepare_data_v2.sbatch  pyproject.toml  resume_and_eval.sbatch  train_vit_attnres_a100.sbatch
.github/workflows/: ci.yml
configs/: train_bdh_a100.yaml  train_bdh_v4_a100.yaml  train_vit_attnres_a100.yaml
configs/smoke/: mlp_smoke.yaml  vit_smoke.yaml
hpc/: eval_attnres.sbatch  train_bdh_a100.sbatch
project/: prepare_data.sbatch  prepare_data_v2.sbatch  run_a100_experiment.sbatch  train_a100.sbatch  train_vit_a100.sbatch  train_vit_attnres_a100.sbatch
project/configs/: train_bdh.yaml  train_bdh_a100.yaml  train_mlp.yaml  train_vit_attnres_a100.yaml  train_vit_s_a100.yaml
project/report/: bdh_report_v2_20260311.md  bdh_v4_fixed_20260326.md  vit_s_v2_fixed_20260324.md  vit_sanity_check_20260323.md
project/scripts/: evaluate.py  prepare_data.py  renormalize_data.py  setup.py  train.py
project/tests/: test_encoding.py  test_models.py
project/ui/: README.md  app.py
report/eda/: eda.md
report/experiments/: bdh_v1.md  bdh_v3_50M.md  vit_attnres.md  vit_v2_fixed.md  (+1 more)
scripts/: train.py
tests/: conftest.py  test_board_encoding.py  test_config_loads.py  test_encoding.py  test_evaluation_smoke.py  test_lightning_smoke_train.py  test_model_forward_vit.py  test_training.py
ui/: engine.py  requirements.txt
university_project/: General overview - Outline.md  Meeting Plan - Outline.md  Project Plan - BDH Searchless Chess.md  bdh.md  ml_pipeline.md  requirements_compliance.xlsx
(+23 files in other folders)
